--- a/doc/modules/cassandra/pages/data_modeling/data_modeling_tools.adoc
+++ b/doc/modules/cassandra/pages/data_modeling/data_modeling_tools.adoc
@@ -9,7 +9,7 @@ NoSQL databases. Hackolade supports the unique concepts of CQL such as
 partition keys and clustering columns, as well as data types including
 collections and UDTs. It also provides the ability to create Chebotko
 diagrams.
-* http://kdm.dataview.org/[Kashlev Data Modeler] is a Cassandra data
+* http://kdm.kashliev.com/[Kashlev Data Modeler] is a Cassandra data
 modeling tool that automates the data modeling methodology described in
 this documentation, including identifying access patterns, conceptual,
 logical, and physical data modeling, and schema generation. It also
@@ -18,7 +18,7 @@ point for your designs.
 * DataStax DevCenter is a tool for managing schema, executing queries
 and viewing results. While the tool is no longer actively supported, it
 is still popular with many developers and is available as a
-https://academy.datastax.com/downloads[free download]. DevCenter
+https://downloads.datastax.com/#devcenter[free download]. DevCenter
 features syntax highlighting for CQL commands, types, and name literals.
 DevCenter provides command completion as you type out CQL commands and
 interprets the commands you type, highlighting any errors you make. The
