--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Add ability to track state in repair (CASSANDRA-15399)
  * Remove unused 'parse' module (CASSANDRA-17484)
  * change six functions in cqlshlib to native Python 3 (CASSANDRA-17417)
  * reduce hot-path object allocations required to record local/remote requests against the client request metrics (CASSANDRA-17424)
