Streaming sessions longer than 3 minutes fail with timeout
patch by Jon Meredith; reviewed by Benedict Elliott Smith, Caleb Rackliffe for CASSANDRA-17510

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Streaming sessions longer than 3 minutes fail with timeout (CASSANDRA-17510)
  * Add ability to track state in repair (CASSANDRA-15399)
  * Remove unused 'parse' module (CASSANDRA-17484)
  * change six functions in cqlshlib to native Python 3 (CASSANDRA-17417)
