--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -42,6 +42,7 @@
  * Add diagnostic events for guardrails (CASSANDRA-17197)
  * Pre hashed passwords in CQL (CASSANDRA-17334)
  * Increase cqlsh version (CASSANDRA-17432)
+ * Added cqlsh custom auth provider support (CASSANDRA-16456)
  * Update SUPPORTED_UPGRADE_PATHS to include 3.0 and 3.x to 4.1 paths and remove obsolete tests (CASSANDRA-17362)
  * Support DELETE in CQLSSTableWriter (CASSANDRA-14797)
  * Failed inbound internode authentication failures generate ugly warning with stack trace (CASSANDRA-17068)
