Add guardrail for maximum replication factor
Patch by Savni Nagarkar; reviewed by Andrés de la Peña, David Capwell and Josh McKenzie for CASSANDRA-17500

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -69,6 +69,7 @@ New features
     - New Guardrails added:
       - Whether ALTER TABLE commands are allowed to mutate columns
       - Whether SimpleStrategy is allowed on keyspace creation or alteration
+      - Maximum replication factor
 
 Upgrading
 ---------
