--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Enhance SnakeYAML properties to be reusable outside of YAML parsing, support camel case conversion to snake case, and add support to ignore properties (CASSANDRA-17166)
  * nodetool compact should support using a key string to find the range to avoid operators having to manually do this (CASSANDRA-17537)
  * Add guardrail for data disk usage (CASSANDRA-17150)
  * Tool to list data paths of existing tables (CASSANDRA-17568)
